@@ -1,4 +1,5 @@
 [1.3.1-SNAPSHOT]
+- Graphics can now take circle radius as an int or float
 
 [1.3.0]
 - Updated to libGDX 1.9.4, roboVM 2.2.0, and artemis-odb 1.4.0
